# FAQ_Chatbot

./: .gitignore  README.md  pyproject.toml
data/: faqs.json
scripts/: benchmark_matching.py  benchmark_preprocessing.py  demo_chatbot_features.py  run_step3_tests.sh  test_data_loading.py  test_preprocessing_interactive.py  test_streamlit_ui.py
src/: config.py  main.py  setup_nltk.py
src/models/: __init__.py  faq.py
src/services/: __init__.py  chatbot.py  data_loader.py  matcher.py  preprocessing_pipeline.py  preprocessor.py  text_utils.py
src/ui/: __init__.py  components.py
src/ui/pages/: 1_📊_Statistics.py  2_📚_Browse_FAQs.py  3_❓_Help.py
tests/: test_chatbot.py  test_chatbot_cli.py  test_data_loader.py  test_integration.py  test_matcher.py  test_models.py  test_preprocessing_pipeline.py  test_preprocessor.py  test_text_utils.py
